@@ -239,8 +239,14 @@ initialise_connection (MyApp *app)
 			G_CALLBACK (on_message), (gpointer) app);
 	app->battery_cb = g_signal_connect (G_OBJECT (app->listener), "battery",
 						G_CALLBACK (on_battery), (gpointer) app);
+#if GLIB_CHECK_VERSION(2,13,0)
 	app->reconnector = g_timeout_add_seconds (20, (GSourceFunc)attempt_reconnect,
 						  (gpointer)app);
+#else
+	app->reconnector = g_timeout_add (20 * 1000, (GSourceFunc)attempt_reconnect,
+					  (gpointer)app);
+#endif
+
 	gdk_threads_init ();
 	app->connecting_mutex = g_mutex_new ();
 	app->message_mutex = g_mutex_new ();
